--- a/tmux.conf
+++ b/tmux.conf
@@ -9,37 +9,16 @@ bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind -n 'C-\' if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 bind C-l send-keys C-l
 bind C-k send-keys C-k
-
-set-option -g default-terminal "screen-256color"
-set-option -g status-keys "emacs"
-
-#set inactive/active window styles
-set -g window-style 'fg=default,bg=colour238'
-set -g window-active-style 'fg=default,bg=colour8'
-
-# set -g window-style 'fg=default,bg=colour7'
-# set -g window-active-style 'fg=default,bg=colour15'
-
-# set the pane border colors
-set -g pane-border-fg colour66
-set -g pane-border-bg colour238
-set -g pane-active-border-fg colour238
-set -g pane-active-border-bg colour66
-
-# set -g pane-border-fg colour15
-# set -g pane-border-bg colour244
-# set -g pane-active-border-fg colour244
-# set -g pane-active-border-bg colour15
 
 set-option -g status-left-length 50
 set-option -g status-right ""
 
 bind-key - split-window -v  -c '#{pane_current_path}'
-bind-key \ split-window -h  -c '#{pane_current_path}'
+bind-key '\' split-window -h  -c '#{pane_current_path}'
 
 bind -n S-Left resize-pane -L 2
 bind -n S-Right resize-pane -R 2
@@ -94,3 +73,34 @@ bind-key C-b send-keys 'tat && exit' 'C-m'
 
 # Scratch pad
 bind C-p if-shell "$is_vim" "send-keys Escape; send-keys ':vsp .scratch'; send-keys Enter" "split-window -h 'vim .scratch'"
+
+
+#### COLOUR (Solarized 256)
+
+# default statusbar colors
+set-option -g status-style fg=colour136,bg=colour235 #yellow and base02
+
+# default window title colors
+set-window-option -g window-status-style fg=colour244,bg=default #base0 and default
+#set-window-option -g window-status-style dim
+
+# active window title colors
+set-window-option -g window-status-current-style fg=colour166,bg=default #orange and default
+#set-window-option -g window-status-current-style bright
+
+# pane border
+set-option -g pane-border-style fg=colour235 #base02
+set-option -g pane-active-border-style fg=colour240 #base01
+
+# message text
+set-option -g message-style fg=colour166,bg=colour235 #orange and base02
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
+
+# bell
+set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
