--- a/tmux.conf
+++ b/tmux.conf
@@ -39,6 +39,7 @@ bind-key b break-pane -d
 
 # bind-key C-j choose-tree
 bind-key C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+bind-key J split-window -v "$(cd $HOME/workspace && for i in $(ls -d */); do echo \${i%%/}; done | fzf --reverse | ifne xargs -I {} tat $HOME/workspace/{})"
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
